# web_workbook_management_app

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish-to-auto-release.yml
src/: App.tsx  constants.ts  layout.tsx  main.tsx  route.tsx  router.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_problems.sql  0002_create_histories.sql  0003_insert_seed.sql
src-tauri/src/: import.rs  main.rs
src/components/: colorToggle.tsx  historyCard.tsx  historyForm.tsx  problemCard.tsx  sideBar.tsx  tabFrame.tsx  timer.tsx
src/components/form/: historyForm.tsx  importForm.tsx  problemForm.tsx  settingForm.tsx  validator.ts
src/components/innerTabComponents/: historyList.tsx  problemList.tsx  problemTable.tsx
src/context/: ColorSchemeContext.tsx
src/hooks/: useDatabase.ts
src/pages/history/: histories.tsx
src/pages/problem/: problemTable.tsx  problems.tsx
src/pages/setting/: settings.tsx
src/pages/today/: problemList.tsx  today.tsx
src/sql/: sql.ts
src/utils/: db.ts  parseCsvToJson.ts  utils.ts
